// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`文字排版 快照测试 基本文字排版 1`] = `
<h6
  className="Typography__TypographyWrapper-sc-12agh80-0 cPYWQg sinoui-typography sinoui-typography--h6"
  color="textPrimary"
  type="h6"
>
  H6
</h6>
`;

exports[`文字排版 快照测试 设置属性 1`] = `
Array [
  <h2
    className="Typography__TypographyWrapper-sc-12agh80-0 cPYWQg sinoui-typography sinoui-typography--h6"
    color="textPrimary"
    type="h6"
  >
    H6
  </h2>,
  <h6
    className="Typography__TypographyWrapper-sc-12agh80-0 hHHUXF sinoui-typography sinoui-typography--h6"
    color="textPrimary"
    type="h6"
  >
    H6
  </h6>,
  <h6
    className="Typography__TypographyWrapper-sc-12agh80-0 dWPgSm sinoui-typography sinoui-typography--h6"
    color="textPrimary"
    type="h6"
  >
    H6
  </h6>,
  <h6
    className="Typography__TypographyWrapper-sc-12agh80-0 caCsbv sinoui-typography sinoui-typography--h6"
    color="success"
    type="h6"
  >
    H6
  </h6>,
  <h6
    className="Typography__TypographyWrapper-sc-12agh80-0 fHXzzR sinoui-typography sinoui-typography--h6 sinoui-typography--gutter-bottom"
    color="textPrimary"
    type="h6"
  >
    H6
  </h6>,
]
`;

exports[`文字排版 快照测试 颜色设置 1`] = `
Array [
  <h6
    className="Typography__TypographyWrapper-sc-12agh80-0 cPYWQg sinoui-typography sinoui-typography--h6"
    color="textPrimary"
    type="h6"
  >
    H6
  </h6>,
  <h6
    className="Typography__TypographyWrapper-sc-12agh80-0 frlqPC sinoui-typography sinoui-typography--h6"
    color="primary"
    type="h6"
  >
    H6
  </h6>,
  <h6
    className="Typography__TypographyWrapper-sc-12agh80-0 Gqsvs sinoui-typography sinoui-typography--h6"
    color="secondary"
    type="h6"
  >
    H6
  </h6>,
  <h6
    className="Typography__TypographyWrapper-sc-12agh80-0 cPYWQg sinoui-typography sinoui-typography--h6"
    color="textPrimary"
    type="h6"
  >
    H6
  </h6>,
  <h6
    className="Typography__TypographyWrapper-sc-12agh80-0 eCrUvj sinoui-typography sinoui-typography--h6"
    color="textSecondary"
    type="h6"
  >
    H6
  </h6>,
  <h6
    className="Typography__TypographyWrapper-sc-12agh80-0 djxlvg sinoui-typography sinoui-typography--h6"
    color="error"
    type="h6"
  >
    H6
  </h6>,
  <h6
    className="Typography__TypographyWrapper-sc-12agh80-0 cdxAKL sinoui-typography sinoui-typography--h6"
    color="warning"
    type="h6"
  >
    H6
  </h6>,
  <h6
    className="Typography__TypographyWrapper-sc-12agh80-0 caCsbv sinoui-typography sinoui-typography--h6"
    color="success"
    type="h6"
  >
    H6
  </h6>,
  <h6
    className="Typography__TypographyWrapper-sc-12agh80-0 cDrmxs sinoui-typography sinoui-typography--h6"
    color="info"
    type="h6"
  >
    H6
  </h6>,
]
`;
